policies/boutique_route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boutique-route
spec:
  hosts:
    - cartservice
  http:
  - match:
    - headers:
        fromFE:
          exact: "true"
    - route:
      - destination:
          host: cartservice
          subset: v2
  - route:
    - destination:
        host: cartservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boutique-route
spec:
  hosts:
    - productcatalogservice
  http:
  - match:
    - headers:
        fromFE:
          exact: "true"
    - route:
      - destination:
          host: productcatalogservice
          subset: v2
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boutique-route
spec:
  hosts:
    - currencyservice
  http:
  - match:
    - headers:
        fromFE:
          exact: "true"
    - route:
      - destination:
          host: currencyservice
          subset: v2
  - route:
    - destination:
        host: currencyservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boutique-route
spec:
  hosts:
    - shippingservice
  http:
  - match:
    - headers:
        fromFE:
          exact: "true"
    - route:
      - destination:
          host: shippingservice
          subset: v2
  - route:
    - destination:
        host: shippingservice
        subset: v1
---
hosts:
  - checkoutservice
http:
  - match:
    - sourceLabels:
        svc: frontendservice
    - headers:
        request:
          add:
            - key: "fromFE"
              value: "true"
---
