policies/circuit_break.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cart
spec:
  host: cartservice
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 1s
---
