policies/accessor_reservation.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "access-user-memc"
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-memcached
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "access-user-memc"
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-memcached
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "access-user-memc"
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-memcached
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "access-user-memc"
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-memcached
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "access-user-memc"
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-memcached
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "access-user-memc"
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-memcached
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-memcached"]
---
